--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Where</title>
@@ -21,10 +24,10 @@
                 <li><a href="#">Feedback</a></li>
             </ul>
         </nav>
-        <div class="centre">
+        <div class="text-center centre fs-2">
             <h1>Welcome to the Gameonn</h1>
             <h2>Prove yourself</h2>
-            <div class="buttons">
+            <div class="buttons text-center fs-4">
                 <button>Explore More</button>
                 <button class="btn">Subscribe Us</button>
             </div>
@@ -32,6 +35,10 @@
 
     </div>
     <!-- <h1>hello to my site</h1> -->
+
+    <!-- Bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
