--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <nav class="navbar">    
             <img src="Gameonn.png" alt="" class="logo">
-            <ul>
+            <ul> 
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
@@ -24,6 +24,7 @@
                 <li><a href="#">Feedback</a></li>
             </ul>
         </nav>
+        <h2>First Git hub upload</h2>
         <div class="text-center centre fs-2">
             <h1>Welcome to the Gameonn</h1>
             <h2>Prove yourself</h2>
@@ -32,7 +33,7 @@
                 <button class="btn">Subscribe Us</button>
             </div>
         </div>
-
+        <div>hello</div>
     </div>
     <!-- <h1>hello to my site</h1> -->
 
